test: 지정가, 시장가 체결처리 테스트 추가